# Ouija

./: .gitignore  AI_FILTER_CREATION_RULES.md  CMakeLists.txt  README.md  build-release.ps1  build.ps1  create-installer.ps1  filter_ouija_template_anaglyph_debug_stdout.txt  installer.nsi  ouija.c  ouija.rc  precompile_kernels.ps1  pyproject.toml  start.ps1  user.ouija.conf
.github/: BALATRO_GAME_ITEMS_AND_MECHANICS.md  CLAUDE_AI_RESEARCH_REPORT_OPENCL_XPLAT.md  FILTERS_FOR_OUIJA_BALATRO_SEED_SEARCHERGUIDE.md  ouija_optimized.c  ouija_search_optimized.cl
Ouija-cli/: CMakeLists.txt  build.ps1  ouija.c  ouija.rc  precompile_kernels.ps1
Ouija-cli/lib/: cache.cl  debug.cl  functions.cl  instance.cl  ouija.cl  ouija.h  ouija_config_loader.h  ouija_host_result.h  ouija_result.cl  ouija_search.cl  seed_host.h  util.cl  utils.h
Ouija-cli/ouija_filters/: ouija_template.cl  ouija_template_anaglyph.cl  ouija_template_anaglyph_Perkeo.cl  ouija_template_erratic_suits.cl  ouija_template_rares.cl
Ouija-ui/: app.py  build_exe.py  requirements.txt  user.ouija.conf
Ouija-ui/controllers/: __init__.py  application_controller.py  build_controller.py  config_controller.py  database_controller.py  funny_search_controller.py  search_controller.py  search_controller_clean.py
Ouija-ui/models/: config_model.py  database_model.py  search_model.py
Ouija-ui/ouija_database/: default.ouija.duckdb  egg.ouija.duckdb
Ouija-ui/utils/: __init__.py  console_manager.py  event_bus.py  game_data.py  result.py  subprocess_output_manager.py  ui_utils.py  version_manager.py
Ouija-ui/views/: dialogs.py  main_window.py
Ouija-ui/views/widgets/: config_widget.py  criteria_widget.py  results_widget.py  run_settings_widget.py
distribution/Ouija-v0.3.14-Windows/lib/: host_items.h  items.cl  ouija_config.cl  seed.cl  util.cl
distribution/Ouija-v0.3.14-Windows/ouija_configs/: egg.ouija.json  weejoker_funrun.ouija.json
distribution/Ouija-v0.3.14-Windows/ouija_filters/: ouija_template_erratic_suits.cl  ouija_template_negatives.cl
ouija_configs/: egg.ouija.json  kings.ouija.json  weejoker_funrun.ouija.json  yorickfacelessjack.ouija.json
ouija_database/: egg.ouija.duckdb  kings.ouija.duckdb  weejoker_funrun.ouija.duckdb  yorickfacelessjack.ouija.duckdb
ouija_filters/: immolate_analyzer.cl  ouija_template.cl  ouija_template_anaglyph.cl  ouija_template_erratic_ranks.cl  ouija_template_erratic_suits.cl  ouija_template_spectral.cl
